initialization and helper fix

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </ol>
         </div>
         <div id="controlHelper">
-            <ol><span>Press TAB on each page to access the corresponding options menu</span> </ol>
+            <span>Press TAB on each page to access the corresponding options menu</span>
         </div>
     </div>
     <script>
